# msgpack-self

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sample.py
msgpack_self/: __init__.py  decode.py  encode.py  float_ieee.py  main.py
tests/: share.py  test_basic.py  test_bin.py  test_dict.py
